--- a/Code/Breast_Cancer.ipynb
+++ b/Code/Breast_Cancer.ipynb
@@ -386,7 +386,7 @@
     "\n",
     "# Split the data into training and testing sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "\n",
+    "print(X_train)\n",
     "# Define base models\n",
     "base_models = [\n",
     "    (\"Random Forest\", RandomForestClassifier(random_state=42)),\n",
