--- a/Code/Chronic_Kidney.ipynb
+++ b/Code/Chronic_Kidney.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "id": "5a010db2-014d-454b-a42b-f1f22781069c",
    "metadata": {},
    "outputs": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "id": "fc30bd10",
    "metadata": {},
    "outputs": [
@@ -239,7 +239,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "id": "6b787635",
    "metadata": {},
    "outputs": [
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "id": "cce2d7d8",
    "metadata": {},
    "outputs": [
@@ -352,7 +352,7 @@
        "Name: classification, dtype: object"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "id": "cd0cbc36-2e61-4703-9f92-0435cd9c243f",
    "metadata": {},
    "outputs": [
@@ -562,7 +562,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "id": "7a5ff5c4-fca2-4b32-88f4-ba8d3298e41c",
    "metadata": {},
    "outputs": [
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "id": "c0c27e68-7469-4508-ac97-8036fce2b8d6",
    "metadata": {},
    "outputs": [
@@ -631,6 +631,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "      id   age    bp     sg   al   su  rbc  pc  pcc  ba  ...  hemo  pcv  \\\n",
+      "383  383  80.0  80.0  1.025  0.0  0.0    1   1    0   0  ...  13.9   49   \n",
+      "76    76  48.0  80.0  1.005  4.0  0.0    0   0    0   1  ...  10.3   36   \n",
+      "299  299  73.0  60.0  1.020  0.0  0.0    1   1    0   0  ...  15.1   52   \n",
+      "279  279  24.0  70.0  1.025  0.0  0.0    1   1    0   0  ...  16.3   48   \n",
+      "361  361  29.0  80.0  1.020  0.0  0.0    1   1    0   0  ...  13.7   54   \n",
+      "..   ...   ...   ...    ...  ...  ...  ...  ..  ...  ..  ...   ...  ...   \n",
+      "284  284  33.0  80.0  1.025  0.0  0.0    1   1    0   0  ...  16.9   52   \n",
+      "341  341  63.0  70.0  1.025  0.0  0.0    1   1    0   0  ...  13.4   41   \n",
+      "91    91  56.0  70.0  1.015  4.0  1.0    0   1    0   0  ...  16.1   52   \n",
+      "320  320  57.0  60.0  1.020  0.0  0.0    1   1    0   0  ...  15.7   44   \n",
+      "337  337  44.0  70.0  1.025  0.0  0.0    1   1    0   0  ...  14.0   52   \n",
+      "\n",
+      "         wc   rc  htn  dm cad appet pe  ane  \n",
+      "383    5100  5.0    0   0   0     0  0    0  \n",
+      "76   \\t6200    4    0   1   0     0  1    0  \n",
+      "299   11000  4.7    0   0   0     0  0    0  \n",
+      "279    5800  5.6    0   0   0     0  0    0  \n",
+      "361    5400  5.8    0   0   0     0  0    0  \n",
+      "..      ...  ...  ...  ..  ..   ... ..  ...  \n",
+      "284    6700  6.0    0   0   0     0  0    0  \n",
+      "341    7300  4.7    0   0   0     0  0    0  \n",
+      "91    12500  5.6    0   0   0     0  0    0  \n",
+      "320   10400  6.2    0   0   0     0  0    0  \n",
+      "337    7500  6.2    0   0   0     0  0    0  \n",
+      "\n",
+      "[110 rows x 25 columns]\n",
       "\n",
       "Logistic Regression Test Results:\n",
       "Accuracy: 1.0\n",
@@ -684,12 +711,12 @@
     "    data[column] = label_encoder.fit_transform(data[column])\n",
     "\n",
     "# Define features and target variable\n",
-    "X = data.drop('classification', axis=1)\n",
+    "X = data.drop('classification','id', axis=1)\n",
     "y = data['classification']\n",
     "\n",
     "# Split the data into training and testing sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
-    "\n",
+    "print(X_train)\n",
     "# Define classifiers\n",
     "logistic_classifier = LogisticRegression(random_state=42)\n",
     "svm_classifier = SVC(probability=True, random_state=42)\n",
