--- a/Code/Breast_Cancer.ipynb
+++ b/Code/Breast_Cancer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "5a010db2-014d-454b-a42b-f1f22781069c",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "cd0cbc36-2e61-4703-9f92-0435cd9c243f",
    "metadata": {},
    "outputs": [
@@ -236,7 +236,7 @@
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "7a5ff5c4-fca2-4b32-88f4-ba8d3298e41c",
    "metadata": {},
    "outputs": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "65d9e187-ad61-41b7-8ea5-ad3f74a46120",
    "metadata": {},
    "outputs": [
@@ -311,7 +311,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Stacking...\n",
+      "Index(['radius_mean', 'texture_mean', 'perimeter_mean', 'area_mean',\n",
+      "       'smoothness_mean', 'compactness_mean', 'concavity_mean',\n",
+      "       'concave points_mean', 'symmetry_mean', 'fractal_dimension_mean',\n",
+      "       'radius_se', 'texture_se', 'perimeter_se', 'area_se', 'smoothness_se',\n",
+      "       'compactness_se', 'concavity_se', 'concave points_se', 'symmetry_se',\n",
+      "       'fractal_dimension_se', 'radius_worst', 'texture_worst',\n",
+      "       'perimeter_worst', 'area_worst', 'smoothness_worst',\n",
+      "       'compactness_worst', 'concavity_worst', 'concave points_worst',\n",
+      "       'symmetry_worst', 'fractal_dimension_worst'],\n",
+      "      dtype='object')\n",
+      "Training Stacking...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Stacking Results:\n",
       "Accuracy: 0.9824561403508771\n",
       "Classification Report:\n",
@@ -370,6 +386,14 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
@@ -386,7 +410,7 @@
     "\n",
     "# Split the data into training and testing sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "print(X_train)\n",
+    "print(X_train.columns)\n",
     "# Define base models\n",
     "base_models = [\n",
     "    (\"Random Forest\", RandomForestClassifier(random_state=42)),\n",
